--- a/client_v1/index.html
+++ b/client_v1/index.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Create hilarious Mad Libs with AI! Get creative with our AI-powered Mad Libs generator. Simply enter a prompt, and let the AI fill in the blanks. Hours of laughter await!"
+    />
     <script
       src="https://kit.fontawesome.com/3711f1f4bb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Ai Ad Libs</title>
+    <title>Ai Mad Lib Generator</title>
   </head>
   <body>
     <div id="root"></div>
