Finish front end adlib responses

--- a/client_v1/index.html
+++ b/client_v1/index.html
@@ -8,6 +8,22 @@
       name="description"
       content="Create hilarious Mad Libs with AI! Get creative with our AI-powered Mad Libs generator. Simply enter a prompt, and let the AI fill in the blanks. Hours of laughter await!"
     />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q160HDP6T6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-Q160HDP6T6");
+    </script>
+
     <script
       src="https://kit.fontawesome.com/3711f1f4bb.js"
       crossorigin="anonymous"
