Adding some more changes

--- a/client_v2/index.html
+++ b/client_v2/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Adlibs</title>
+    <meta
+      name="description"
+      content="Create hilarious Mad Libs with AI! Get creative with our AI-powered Mad Libs generator. Simply enter a prompt, and let the AI fill in the blanks. Hours of laughter await!"
+    />
+    <script
+      src="https://kit.fontawesome.com/3711f1f4bb.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Ai Mad Lib Generator</title>
   </head>
   <body>
     <div id="root"></div>
