Update saves, etc.

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Create hilarious Mad Libs with AI! Get creative with our AI-powered Mad Libs generator. Simply enter a prompt, and let the AI fill in the blanks. Hours of laughter await!"
     />
+    <script
+      src="https://kit.fontawesome.com/3711f1f4bb.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google tag (gtag.js) -->
     <script
