--- a/client/index.html
+++ b/client/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://chat.openai.com/favicon.ico"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Create hilarious Mad Libs with AI! Get creative with our AI-powered Mad Libs generator. Simply enter a prompt, and let the AI fill in the blanks. Hours of laughter await!"
     />
-    <script
-      src="https://kit.fontawesome.com/3711f1f4bb.js"
-      crossorigin="anonymous"
-    ></script>
 
     <!-- Google tag (gtag.js) -->
     <script
