Adding random quotes

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,13 @@
       crossorigin="anonymous"
     ></script>
     <title>Ai Mad Lib Generator</title>
+    <link
+      rel="preload"
+      href="/random-quotes.json"
+      as="fetch"
+      type="application/json"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"></div>
