--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,11 @@
       src="https://kit.fontawesome.com/3711f1f4bb.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1284691292653332"
+      crossorigin="anonymous"
+    ></script>
     <title>Ai Mad Lib Generator</title>
     <link
       rel="preload"
